# reth-bsc

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
crates/parallel-evm/: Cargo.toml  README.md
crates/parallel-evm/src/: db_wrapper.rs  error.rs  executor.rs  lib.rs  mv_memory.rs  read_set.rs  scheduler.rs  status.rs  storage.rs  vm.rs  worker.rs
crates/parallel-evm/tests/: correctness.rs
docs/: PARALLEL_EXEC_NEXT_SESSION.md  WEEK_SUMMARY.md
src/: lib.rs  main.rs  prefetcher.rs  shared.rs
src/chainspec/: bsc.rs  bsc_chapel.rs  bsc_rialto.rs  local.rs  mod.rs  parser.rs
src/consensus/eip4844/: bep657.rs  mod.rs
src/consensus/parlia/: consensus.rs  db.rs  mod.rs  provider.rs  snapshot.rs  td_store.rs  util.rs  validation.rs  vote_pool.rs
src/consensus/parlia/tests/: snapshot_persistence.rs
src/evm/: handler.rs  transaction.rs
src/evm/api/: mod.rs
src/evm/precompiles/: bls.rs  cometbft.rs  error.rs  mod.rs
src/hardforks/: bsc.rs  mod.rs
src/node/: consensus.rs  engine.rs  mod.rs  primitives.rs  storage.rs
src/node/engine_api/: builder.rs  mod.rs  payload.rs  validator.rs
src/node/evm/: assembler.rs  batch.rs  builder.rs  config.rs  error.rs  executor.rs  factory.rs  mod.rs  parallel.rs  post_execution.rs  pre_execution.rs  system_tx_gas_tests.rs  util.rs
src/node/evm/patch/: mod.rs
src/node/miner/: attributes.rs  bid_simulator.rs  bsc_miner.rs  mod.rs  payload.rs  signer.rs  util.rs
src/node/network/: blocks_by_range.rs  mod.rs  peer_metrics.rs
src/node/network/block_import/: mod.rs  service.rs
src/node/network/bsc_protocol/: registry.rs
src/node/pool/: mod.rs
src/rpc/: blob.rs  eth_ext.rs  mev.rs  mod.rs  parlia.rs
src/system_contracts/: mod.rs
testing/: run-evm-tests.sh
testing/bsc-ef-tests/: .gitignore  Cargo.toml
testing/bsc-ef-tests/src/: case.rs  lib.rs  models.rs  result.rs  suite.rs
testing/bsc-ef-tests/src/cases/: blockchain_test.rs  mod.rs
testing/bsc-ef-tests/tests/: tests.rs
tools/migrate-blocks/: Cargo.toml  README.md
tools/migrate-blocks/src/: bodies.rs  header_numbers.rs  main.rs  pipeline.rs  reader.rs  static_copy.rs  writer.rs
